GNOME Bugzilla – Bug 745253
The bottom panel's GtkNotebook don't follow the visible child of the GtkStack
Last modified: 2015-02-27 13:31:03 UTC
As stated in the summary, changing the visible children using set_visible_child doesn't change the active GtkNotebook page.
Created attachment 298073 [details] [review] bottom panel notebook follow visible stack child
Review of attachment 298073 [details] [review]: ok, seen with pbor on irc commited as fd03615