bottom-panel: follow stack child change

When switching stack child it must be reflected in the notebook

https://bugzilla.gnome.org/show_bug.cgi?id=745253